--- a/Vienna/Interfaces/nl.lproj/GeneralPreferencesView.strings
+++ b/Vienna/Interfaces/nl.lproj/GeneralPreferencesView.strings
@@ -67,6 +67,9 @@
 /* Class = "NSButtonCell"; title = "Check for new articles on start up"; ObjectID = "pXX-MI-tJX"; */
 "pXX-MI-tJX.title" = "Zoek naar nieuwe artikelen bij het starten";
 
+/* Class = "NSTextFieldCell"; title = "Updates:"; ObjectID = "qeb-at-hYb"; */
+"qeb-at-hYb.title" = "Updates:";
+
 /* Class = "NSTextFieldCell"; title = "Mark current article read:"; ObjectID = "sCl-hz-PFF"; */
 "sCl-hz-PFF.title" = "Markeer huidige artikel als gelezen:";
 
