--- a/Vienna/Resources/cs.lproj/Localizable.strings
+++ b/Vienna/Resources/cs.lproj/Localizable.strings
@@ -481,7 +481,7 @@
 /* No comment provided by engineer. */
 "Search Results" = "Výsledky hledání";
 
-/* No comment provided by engineer. */
+/* Title of a popup menu item */
 "Select…" = "Vybrat…";
 
 /* No comment provided by engineer. */
