--- a/Vienna/Resources/eu.lproj/Localizable.strings
+++ b/Vienna/Resources/eu.lproj/Localizable.strings
@@ -418,7 +418,7 @@
 /* No comment provided by engineer. */
 "Return to the previous page" = "Bueltatu aurreneko orrira";
 
-/* No comment provided by engineer. */
+/* Title of a popup menu item */
 "Select…" = "Aukeratu…";
 
 /* No comment provided by engineer. */
