--- a/Vienna/Resources/it.lproj/Localizable.strings
+++ b/Vienna/Resources/it.lproj/Localizable.strings
@@ -433,7 +433,7 @@
 /* No comment provided by engineer. */
 "Search Results" = "Cerca nei Risultati";
 
-/* No comment provided by engineer. */
+/* Title of a popup menu item */
 "Select…" = "Seleziona…";
 
 /* No comment provided by engineer. */
