--- a/Vienna/Resources/ja.lproj/Localizable.strings
+++ b/Vienna/Resources/ja.lproj/Localizable.strings
@@ -379,7 +379,7 @@
 /* No comment provided by engineer. */
 "Return to the previous page" = "前のページに戻る";
 
-/* No comment provided by engineer. */
+/* Title of a popup menu item */
 "Select…" = "選択…";
 
 /* No comment provided by engineer. */
