--- a/Vienna/Resources/ko.lproj/Localizable.strings
+++ b/Vienna/Resources/ko.lproj/Localizable.strings
@@ -400,7 +400,7 @@
 /* No comment provided by engineer. */
 "Return to the previous page" = "이전 페이지로 이동";
 
-/* No comment provided by engineer. */
+/* Title of a popup menu item */
 "Select…" = "선택…";
 
 /* No comment provided by engineer. */
