--- a/Vienna/Resources/pt.lproj/Localizable.strings
+++ b/Vienna/Resources/pt.lproj/Localizable.strings
@@ -448,7 +448,7 @@
 /* No comment provided by engineer. */
 "Search Results" = "Procurar resultados";
 
-/* No comment provided by engineer. */
+/* Title of a popup menu item */
 "Select…" = "Seleccionar…";
 
 /* No comment provided by engineer. */
