--- a/Vienna/Resources/sv.lproj/Localizable.strings
+++ b/Vienna/Resources/sv.lproj/Localizable.strings
@@ -502,7 +502,7 @@
 /* No comment provided by engineer. */
 "Search Results" = "Sökresultat";
 
-/* No comment provided by engineer. */
+/* Title of a popup menu item */
 "Select…" = "Markera…";
 
 /* No comment provided by engineer. */
