--- a/Vienna/Resources/tr.lproj/Localizable.strings
+++ b/Vienna/Resources/tr.lproj/Localizable.strings
@@ -460,7 +460,7 @@
 /* No comment provided by engineer. */
 "Search Results" = "Arama Sonuçları";
 
-/* No comment provided by engineer. */
+/* Title of a popup menu item */
 "Select…" = "Seç…";
 
 /* No comment provided by engineer. */
