--- a/Vienna/Interfaces/da.lproj/ActivityViewer.strings
+++ b/Vienna/Interfaces/da.lproj/ActivityViewer.strings
@@ -4,3 +4,6 @@
 /* Class = "NSTableColumn"; headerCell.title = "Source"; ObjectID = "18"; */
 "18.headerCell.title" = "Kilde";
 
+/* Class = "NSTableColumn"; headerCell.title = "Status"; ObjectID = "19"; */
+"19.headerCell.title" = "Status";
+
