--- a/Vienna/Resources/de.lproj/Localizable.strings
+++ b/Vienna/Resources/de.lproj/Localizable.strings
@@ -4,6 +4,12 @@
 /* No comment provided by engineer. */
 "(Untitled Feed)" = "(Unbenannter Feed)";
 
+/* Appended to application name in Open With menu */
+"%@ (default)" = "%@ (Standard)";
+
+/* No comment provided by engineer. */
+"%@ Info" = "%@ Info";
+
 /* Progress in bytes, e.g. 1 KB of 1 MB */
 "%@ of %@" = "%1$@ von %2$@";
 
@@ -30,6 +36,9 @@
 
 /* No comment provided by engineer. */
 "%u unread" = "%u ungelesen";
+
+/* Title in popup submenu */
+"<None>" = "<Nichts>";
 
 /* No comment provided by engineer. */
 "A folder with that name already exists" = "Ein Ordner mit dem Namen existiert bereits";
@@ -357,6 +366,9 @@
 /* No comment provided by engineer. */
 "Last Week" = "letzte Woche";
 
+/* Data field name visible in menu/article list */
+"Link" = "Verknüpfung";
+
 /* No comment provided by engineer. */
 "Loading" = "Lade ...";
 
@@ -364,7 +376,7 @@
 "Locate…" = "Auswählen …";
 
 /* No comment provided by engineer. */
-"Make sure the username and password needed to access the Open Reader server are correctly set in Vienna's preferences.\nAlso check your network access." = "Überprüfe ob Benutzername und Passwort für den Zugang zum Open Reader Server in den Einstellungen von Vienna richtig gespeichert sind. Überprüfe auch ob Zugang zum Internet besteht.";
+"Make sure the username and password needed to access the Open Reader server are correctly set in Vienna's preferences. Also check your network access." = "Überprüfe ob Benutzername und Passwort für den Zugang zum Open Reader Server in den Einstellungen von Vienna richtig gespeichert sind. Überprüfe auch ob Zugang zum Internet besteht.";
 
 /* Title of a menu item */
 "Mark All Articles as Read" = "Alle Einträge als gelesen markieren";
@@ -417,6 +429,9 @@
 /* test for a folder (not operational as of Vienna 3.2) */
 "not under" = "nicht unter";
 
+/* Title of a button on an alert */
+"OK" = "OK";
+
 /* No comment provided by engineer. */
 "One or more downloads are in progress" = "Eine oder mehrere Dateien werden heruntergeladen.";
 
@@ -464,6 +479,9 @@
 
 /* Title of a menu item */
 "Open Subscription Home Page in External Browser" = "Öffne Homepage des Abonnements im externen Browser";
+
+/* No comment provided by engineer. */
+"Open With" = "Öffnen mit";
 
 /* No comment provided by engineer. */
 "Other" = "Auswählen";
@@ -556,7 +574,7 @@
 /* No comment provided by engineer. */
 "Search Results" = "Suchergebnisse";
 
-/* No comment provided by engineer. */
+/* Title of a popup menu item */
 "Select…" = "Auswählen…";
 
 /* No comment provided by engineer. */
@@ -598,8 +616,11 @@
 /* Toolbar item name for the Syncing preference pane */
 "Syncing" = "Synchronisiere";
 
+/* Data field name visible in smart folder definition */
+"Text" = "Text";
+
 /* No comment provided by engineer. */
-"The \"%@\" folder cannot be created." = "Der Ordner \"%@\" konnte nicht erstellt.";
+"The \"%@\" folder cannot be created." = "Der Ordner \"%@\" konnte nicht erstellt werden.";
 
 /* No comment provided by engineer. */
 "The database (%@) file format is not supported by this version of Vienna. Delete or rename the file and restart Vienna." = "Ihre existierende %@ Datei wird von dieser Vienna-Version nicht unterstützt. Löschen oder benennen Sie diese Datei um und starten Sie Vienna erneut.";
@@ -623,7 +644,7 @@
 "The style %@ appears to be missing or corrupted" = "Der Stil %@ scheint defekt zu sein.";
 
 /* No comment provided by engineer. */
-"The subscription for \"%@\" requires a user name and password for access." = "Der Zugriff auf den Feed %@ benötigt das Einloggen am Server";
+"The subscription for \"%@\" requires a user name and password for access." = "Der Zugriff auf den Feed %@ benötigt das Einloggen am Server.";
 
 /* No comment provided by engineer. */
 "This article contains an enclosed file." = "Dieser Artikel enthält einen Anhang.";
@@ -657,6 +678,9 @@
 
 /* Title of a button on an alert */
 "Upgrade Database" = "Datenbank Aktualisieren";
+
+/* URL */
+"URL" = "URL";
 
 /* No comment provided by engineer. */
 "Vienna cannot open the file \"%@\" because it moved since you downloaded it." = "Vienna konnte die Datei \"%@\" nicht öffnen, da sie seit dem Download bewegt wurde.";
